--- a/Data_files_and_relevant_code/code_files/02 Generate Synthetic patient data.ipynb
+++ b/Data_files_and_relevant_code/code_files/02 Generate Synthetic patient data.ipynb
@@ -224,7 +224,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 4
    },
-   "notebookName": "Generate Synthetic patient data",
+   "notebookName": "02 Generate Synthetic patient data",
    "widgets": {}
   },
   "language_info": {
