Gold: Safety Metrics (Trial Arm Level)

--- a/Data_files_and_relevant_code/code_files/04 Gold layer design.ipynb
+++ b/Data_files_and_relevant_code/code_files/04 Gold layer design.ipynb
@@ -105,13 +105,83 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "bdb174f6-84fc-4f2d-8095-4e72ad6adc87",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "2. Gold: Safety Metrics (Trial Arm Level)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "2905b2ce-3707-4e8e-b0b2-344709e461aa",
+     "showTitle": true,
+     "tableResultSettingsMap": {},
+     "title": "Gold: Safety Metrics (Trial Arm Level)"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Drop table if exists to avoid schema merge errors\n",
+    "spark.sql(\"DROP TABLE IF EXISTS clinical_trial_gold.safety_metrics\")\n",
+    "\n",
+    "from pyspark.sql.functions import col, countDistinct, sum\n",
+    "from pyspark.sql.types import IntegerType\n",
+    "\n",
+    "aes = spark.table(\"clinical_trial_silver.adverse_events\")\n",
+    "patients = spark.table(\"clinical_trial_silver.patients\")\n",
+    "\n",
+    "safety = (\n",
+    "    aes.join(patients, \"patient_id\")\n",
+    "    .groupBy(\"treatment_arm\")\n",
+    "    .agg(\n",
+    "        countDistinct(\"patient_id\").alias(\"patients_with_ae\"),\n",
+    "        sum(col(\"serious\").cast(\"int\")).alias(\"total_serious_ae\")\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "total_patients = (\n",
+    "    patients.groupBy(\"treatment_arm\")\n",
+    "    .agg(countDistinct(\"patient_id\").alias(\"total_patients\"))\n",
+    ")\n",
+    "\n",
+    "gold_safety_metrics = (\n",
+    "    safety.join(total_patients, \"treatment_arm\")\n",
+    "    .withColumn(\"ae_incidence_rate\", col(\"patients_with_ae\") / col(\"total_patients\"))\n",
+    ")\n",
+    "\n",
+    "(\n",
+    "    gold_safety_metrics.write\n",
+    "    .format(\"delta\")\n",
+    "    .mode(\"overwrite\")\n",
+    "    .saveAsTable(\"clinical_trial_gold.safety_metrics\")\n",
+    ")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "bdb174f6-84fc-4f2d-8095-4e72ad6adc87",
+     "nuid": "e418f310-0269-4cc1-a18a-6c05bda146bd",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
