Gold layer - Exposure summary

--- a/Data_files_and_relevant_code/code_files/04 Gold layer design.ipynb
+++ b/Data_files_and_relevant_code/code_files/04 Gold layer design.ipynb
@@ -175,13 +175,74 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "e418f310-0269-4cc1-a18a-6c05bda146bd",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "3. Gold: Exposure Summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "c1240643-2876-443f-b3f3-8867f6df202d",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.functions import col, count, avg, sum, round\n",
+    "\n",
+    "dosing = spark.table(\"clinical_trial_silver.drug_dosing\")\n",
+    "patients = spark.table(\"clinical_trial_silver.patients\")\n",
+    "\n",
+    "gold_exposure_summary = (\n",
+    "    dosing.join(patients, \"patient_id\")\n",
+    "    .groupBy(\"patient_id\", \"treatment_arm\")\n",
+    "    .agg(\n",
+    "        count(\"*\").alias(\"planned_doses\"),\n",
+    "        sum(\"exposed_flag\").alias(\"taken_doses\"),\n",
+    "        avg(\"dose_mg\").alias(\"avg_dose_mg\") \n",
+    "    )\n",
+    "    .withColumn(\n",
+    "        \"compliance_rate\",\n",
+    "        round(col(\"taken_doses\") / col(\"planned_doses\") * 100,2)\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "(\n",
+    "    gold_exposure_summary.write\n",
+    "    .format(\"delta\")\n",
+    "    .mode(\"overwrite\")\n",
+    "    .saveAsTable(\"clinical_trial_gold.exposure_summary\")\n",
+    ")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "e418f310-0269-4cc1-a18a-6c05bda146bd",
+     "nuid": "52955ffd-ca76-450e-9efe-84629b3ef93a",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
