Gold: Efficacy metrics

--- a/Data_files_and_relevant_code/code_files/04 Gold layer design.ipynb
+++ b/Data_files_and_relevant_code/code_files/04 Gold layer design.ipynb
@@ -208,6 +208,9 @@
    },
    "outputs": [],
    "source": [
+    "# Drop table if exists to avoid schema merge errors\n",
+    "spark.sql(\"DROP TABLE IF EXISTS clinical_trial_gold.exposure_summary\")\n",
+    "\n",
     "from pyspark.sql.functions import col, count, avg, sum, round\n",
     "\n",
     "dosing = spark.table(\"clinical_trial_silver.drug_dosing\")\n",
@@ -236,13 +239,74 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "52955ffd-ca76-450e-9efe-84629b3ef93a",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "4. Gold: Efficacy Metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "9e3ee07f-3a37-4b8a-aef8-fb632186fa52",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.functions import col, when, countDistinct, sum\n",
+    "\n",
+    "\n",
+    "outcomes= spark.table(\"clinical_trial_silver.outcomes\")\n",
+    "patients = spark.table(\"clinical_trial_silver.patients\")\n",
+    "\n",
+    "efficacy = (\n",
+    "    outcomes.join(patients, \"patient_id\")\n",
+    "    .groupBy(\"treatment_arm\")\n",
+    "    .agg(\n",
+    "        countDistinct(\"patient_id\").alias(\"n_patients\"),\n",
+    "        sum(when(col(\"best_response\").isin(\"CR\", \"PR\"), 1).otherwise(0)).alias(\"responders\"),\n",
+    "        sum(when(col(\"best_response\").isin(\"CR\", \"PR\", \"SD\"),1).otherwise(0)).alias(\"disease_control\")\n",
+    "    )\n",
+    "    .withColumn(\"ORR\", col(\"responders\") / col(\"n_patients\"))\n",
+    "    .withColumn(\"DCR\", col(\"disease_control\") / col(\"n_patients\"))\n",
+    ")\n",
+    "\n",
+    "\n",
+    "(\n",
+    "    efficacy.write\n",
+    "    .format(\"delta\")\n",
+    "    .mode(\"overwrite\")\n",
+    "    .saveAsTable(\"clinical_trial_gold.efficacy_metrics\")\n",
+    ")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "52955ffd-ca76-450e-9efe-84629b3ef93a",
+     "nuid": "164a8487-1014-4829-9e0a-8262db09e947",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
