--- a/Implementing_with_auto_loader/02 Data Ingestion to bronze.ipynb
+++ b/Implementing_with_auto_loader/02 Data Ingestion to bronze.ipynb
@@ -253,13 +253,190 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "5bae34b2-d068-4ac4-b8dd-176f80da2d56",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "Read labs files - to write to labs table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "f7b0d933-1605-47d4-b4d4-ad17d5ae314b",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Read labs files using autoloader\n",
+    "\n",
+    "df_labs = (\n",
+    "    spark\n",
+    "    .readStream\n",
+    "    .format(\"cloudFiles\")\n",
+    "    .option(\"cloudFiles.format\", \"csv\")\n",
+    "    .option(\"pathGlobFilter\", \"*.csv\")\n",
+    "    .option(\"header\", \"true\")\n",
+    "    .option(\"cloudFiles.schemaLocation\", \"/Volumes/workspace/clinicaltrial_data/clinicaltrial_auto_landing/checkpoint/autoloader/4/\")\n",
+    "    .load(\"/Volumes/workspace/clinicaltrial_data/clinicaltrial_auto_landing/autoloader_input/labs/\")\n",
+    ")\n",
+    "\n",
+    "\n",
+    "# Write labs data to delta table using autoloader\n",
+    "(\n",
+    "    df_labs\n",
+    "    .writeStream\n",
+    "    .format(\"delta\")\n",
+    "    .option(\"checkpointLocation\", \"/Volumes/workspace/clinicaltrial_data/clinicaltrial_auto_landing/checkpoint/autoloader/4/\")\n",
+    "    .trigger(availableNow=True)\n",
+    "    .toTable(\"clinicaltrial_bronze.labs\")\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "49a995b2-ad4e-444c-b61f-330f3b033dc9",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "Read Outcomes files - to write to outcomes table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "27188aed-e940-4ab5-95f2-ce13cad386b7",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Read outcomes files using autoloader\n",
+    "\n",
+    "df_outcomes = (\n",
+    "    spark\n",
+    "    .readStream\n",
+    "    .format(\"cloudFiles\")\n",
+    "    .option(\"cloudFiles.format\", \"csv\")\n",
+    "    .option(\"pathGlobFilter\", \"*.csv\")\n",
+    "    .option(\"header\", \"true\")\n",
+    "    .option(\"cloudFiles.schemaLocation\", \"/Volumes/workspace/clinicaltrial_data/clinicaltrial_auto_landing/checkpoint/autoloader/5/\")\n",
+    "    .load(\"/Volumes/workspace/clinicaltrial_data/clinicaltrial_auto_landing/autoloader_input/outcomes/\")\n",
+    ")\n",
+    "\n",
+    "\n",
+    "# Write outcomes data to delta table using autoloader\n",
+    "(\n",
+    "    df_outcomes\n",
+    "    .writeStream\n",
+    "    .format(\"delta\")\n",
+    "    .option(\"checkpointLocation\", \"/Volumes/workspace/clinicaltrial_data/clinicaltrial_auto_landing/checkpoint/autoloader/5/\")\n",
+    "    .trigger(availableNow=True)\n",
+    "    .toTable(\"clinicaltrial_bronze.outcomes\")\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "5acc1e36-48db-494f-a5e6-b397cfb1f671",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "Read Visits files - to write to Visits table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "09baffb0-56d3-43f8-9911-f6c97b06edde",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Read Visit files using autoloader\n",
+    "\n",
+    "df_visits = (\n",
+    "    spark\n",
+    "    .readStream\n",
+    "    .format(\"cloudFiles\")\n",
+    "    .option(\"cloudFiles.format\", \"csv\")\n",
+    "    .option(\"pathGlobFilter\", \"*.csv\")\n",
+    "    .option(\"header\", \"true\")\n",
+    "    .option(\"cloudFiles.schemaLocation\", \"/Volumes/workspace/clinicaltrial_data/clinicaltrial_auto_landing/checkpoint/autoloader/6/\")\n",
+    "    .load(\"/Volumes/workspace/clinicaltrial_data/clinicaltrial_auto_landing/autoloader_input/visits/\")\n",
+    ")\n",
+    "\n",
+    "\n",
+    "# Write visits data to delta table using autoloader\n",
+    "(\n",
+    "    df_visits\n",
+    "    .writeStream\n",
+    "    .format(\"delta\")\n",
+    "    .option(\"checkpointLocation\", \"/Volumes/workspace/clinicaltrial_data/clinicaltrial_auto_landing/checkpoint/autoloader/6/\")\n",
+    "    .trigger(availableNow=True)\n",
+    "    .toTable(\"clinicaltrial_bronze.visits\")\n",
+    ")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "5bae34b2-d068-4ac4-b8dd-176f80da2d56",
+     "nuid": "36bf3169-396e-41bc-ace9-d1fe691647f0",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
