Silver & Gold layer notebooks added

--- a/Implementing_with_auto_loader/02 Data Ingestion to bronze.ipynb
+++ b/Implementing_with_auto_loader/02 Data Ingestion to bronze.ipynb
@@ -4,57 +4,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
-     "inputWidgets": {},
-     "nuid": "1949440f-90da-4a02-9342-9ba58c187af7",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "source": [
-    "Read patients file - to create patients table"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
       "byteLimit": 2048000,
       "rowLimit": 10000
      },
-     "inputWidgets": {},
-     "nuid": "6321d30a-6cbc-4957-8e40-37e4f409dde5",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Read files using Autoloader with checkpoint\n",
-    "from pyspark.sql.functions import col\n",
-    "\n",
-    "df_patients = (\n",
-    "    spark\n",
-    "    .readStream\n",
-    "    .format(\"cloudFiles\")\n",
-    "    .option(\"cloudFiles.format\", \"csv\")\n",
-    "    .option(\"pathGlobFilter\", \"*.csv\")\n",
-    "    .option(\"header\", \"true\")\n",
-    "    .option(\"cloudFiles.schemaLocation\", \"/Volumes/workspace/clinicaltrial_data/clinicaltrial_auto_landing/checkpoint/autoloader/1/\")\n",
-    "    .load(\"/Volumes/workspace/clinicaltrial_data/clinicaltrial_auto_landing/autoloader_input/patients/\")\n",
-    ")\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "e592fba1-d592-4574-a91e-a6e01b6f57fb",
      "showTitle": false,
@@ -93,7 +46,66 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "1949440f-90da-4a02-9342-9ba58c187af7",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "Read patients file - to create patients table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "6321d30a-6cbc-4957-8e40-37e4f409dde5",
+     "showTitle": true,
+     "tableResultSettingsMap": {},
+     "title": "Untitled"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Read files using Autoloader with checkpoint\n",
+    "from pyspark.sql.functions import col, current_timestamp\n",
+    "\n",
+    "df_patients = (\n",
+    "    spark\n",
+    "    .readStream\n",
+    "    .format(\"cloudFiles\")\n",
+    "    .option(\"cloudFiles.format\", \"csv\")\n",
+    "    .option(\"pathGlobFilter\", \"*.csv\")\n",
+    "    .option(\"cloudFiles.schemaHints\", \"age double\")\n",
+    "    .option(\"header\", \"true\")\n",
+    "    .option(\"cloudFiles.schemaLocation\", \"/Volumes/workspace/clinicaltrial_data/clinicaltrial_auto_landing/checkpoint/autoloader/1/\")\n",
+    "    .load(\"/Volumes/workspace/clinicaltrial_data/clinicaltrial_auto_landing/autoloader_input/patients/\")\n",
+    "    .withColumn(\"ingestion_timestamp\", current_timestamp())\n",
+    "    .select(\"*\", col(\"_metadata.file_name\").alias(\"source_file\"))\n",
+    ")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "e40a642e-5332-46c7-b73a-95f5bc2838f3",
      "showTitle": false,
@@ -139,7 +151,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "d8275e53-a8cf-4f82-a63c-69b799f2100c",
      "showTitle": false,
@@ -177,8 +192,11 @@
     "    .option(\"cloudFiles.format\", \"csv\")\n",
     "    .option(\"pathGlobFilter\", \"*.csv\")\n",
     "    .option(\"header\", \"true\")\n",
+    "    .option(\"cloudFiles.schemaHints\", \"ae_start_date date, ae_end_date date, severity integer, serious boolean, related_to_drug boolean\")\n",
     "    .option(\"cloudFiles.schemaLocation\", \"/Volumes/workspace/clinicaltrial_data/clinicaltrial_auto_landing/checkpoint/autoloader/2/\")\n",
     "    .load(\"/Volumes/workspace/clinicaltrial_data/clinicaltrial_auto_landing/autoloader_input/adverse_events/\")\n",
+    "    .withColumn(\"ingestion_timestamp\", current_timestamp())\n",
+    "    .select(\"*\", col(\"_metadata.file_name\").alias(\"source_file\"))\n",
     ")\n",
     "\n",
     "\n",
@@ -197,7 +215,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "9cc881cf-69e7-455f-89c8-39ea9e2550fd",
      "showTitle": false,
@@ -236,8 +257,11 @@
     "    .option(\"cloudFiles.format\", \"csv\")\n",
     "    .option(\"pathGlobFilter\", \"*.csv\")\n",
     "    .option(\"header\", \"true\")\n",
+    "    .option(\"cloudFiles.schemaHints\", \"dose_date date, dose_mg integer\")\n",
     "    .option(\"cloudFiles.schemaLocation\", \"/Volumes/workspace/clinicaltrial_data/clinicaltrial_auto_landing/checkpoint/autoloader/3/\")\n",
     "    .load(\"/Volumes/workspace/clinicaltrial_data/clinicaltrial_auto_landing/autoloader_input/drug_dosing/\")\n",
+    "    .withColumn(\"ingestion_timestamp\", current_timestamp())\n",
+    "    .select(\"*\", col(\"_metadata.file_name\").alias(\"source_file\"))\n",
     ")\n",
     "\n",
     "\n",
@@ -256,7 +280,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "5bae34b2-d068-4ac4-b8dd-176f80da2d56",
      "showTitle": false,
@@ -295,8 +322,11 @@
     "    .option(\"cloudFiles.format\", \"csv\")\n",
     "    .option(\"pathGlobFilter\", \"*.csv\")\n",
     "    .option(\"header\", \"true\")\n",
+    "    .option(\"cloudFiles.schemaHints\", \"visit_date date, normal_low integer, normal_high integer\")\n",
     "    .option(\"cloudFiles.schemaLocation\", \"/Volumes/workspace/clinicaltrial_data/clinicaltrial_auto_landing/checkpoint/autoloader/4/\")\n",
     "    .load(\"/Volumes/workspace/clinicaltrial_data/clinicaltrial_auto_landing/autoloader_input/labs/\")\n",
+    "    .withColumn(\"ingestion_timestamp\", current_timestamp())\n",
+    "    .select(\"*\", col(\"_metadata.file_name\").alias(\"source_file\"))\n",
     ")\n",
     "\n",
     "\n",
@@ -315,7 +345,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "49a995b2-ad4e-444c-b61f-330f3b033dc9",
      "showTitle": false,
@@ -354,8 +387,11 @@
     "    .option(\"cloudFiles.format\", \"csv\")\n",
     "    .option(\"pathGlobFilter\", \"*.csv\")\n",
     "    .option(\"header\", \"true\")\n",
+    "    .option(\"cloudFiles.schemaHints\", \"censored boolean, response_date date, progression_date date, death_date date\")\n",
     "    .option(\"cloudFiles.schemaLocation\", \"/Volumes/workspace/clinicaltrial_data/clinicaltrial_auto_landing/checkpoint/autoloader/5/\")\n",
     "    .load(\"/Volumes/workspace/clinicaltrial_data/clinicaltrial_auto_landing/autoloader_input/outcomes/\")\n",
+    "    .withColumn(\"ingestion_timestamp\", current_timestamp())\n",
+    "    .select(\"*\", col(\"_metadata.file_name\").alias(\"source_file\"))\n",
     ")\n",
     "\n",
     "\n",
@@ -374,7 +410,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "5acc1e36-48db-494f-a5e6-b397cfb1f671",
      "showTitle": false,
@@ -413,8 +452,11 @@
     "    .option(\"cloudFiles.format\", \"csv\")\n",
     "    .option(\"pathGlobFilter\", \"*.csv\")\n",
     "    .option(\"header\", \"true\")\n",
+    "    .option(\"cloudFiles.schemaHints\", \"visit_date date\")\n",
     "    .option(\"cloudFiles.schemaLocation\", \"/Volumes/workspace/clinicaltrial_data/clinicaltrial_auto_landing/checkpoint/autoloader/6/\")\n",
     "    .load(\"/Volumes/workspace/clinicaltrial_data/clinicaltrial_auto_landing/autoloader_input/visits/\")\n",
+    "    .withColumn(\"ingestion_timestamp\", current_timestamp())\n",
+    "    .select(\"*\", col(\"_metadata.file_name\").alias(\"source_file\"))\n",
     ")\n",
     "\n",
     "\n",
@@ -434,7 +476,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "36bf3169-396e-41bc-ace9-d1fe691647f0",
      "showTitle": false,
@@ -458,7 +503,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 8341345565707582,
+     "commandId": 8341345565707583,
      "dataframes": [
       "_sqldf"
      ]
